# outlook-mcp

./: .env  CLAUDE.md  README.md  config.js  create-notifications-rule.js  index.js  move-github-emails.js  outlook-auth-server.js  package-lock.json  package.json  repomix-output.xml  test-modular-server.sh  zendesk-api-improvements.patch
.github/workflows/: deploy.yml  test.yml
auth/: tools.js
calendar/: accept.js  cancel.js  create.js  decline.js  delete.js  index.js  list.js
docs/: repomix-output-blakmatrix-node-zendesk.xml
email/: folder-utils.js  read.js  search.js  send.js
folder/: index.js  move.js
my-mcp-server-github-auth/: .mcp.json  DEPLOYMENT.md  README.md  TESTING_GUIDE.md  create-oauth-apps.sh  package-lock.json  package.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
my-mcp-server-github-auth/src/: index.test.ts  index.ts  utils.ts  zendesk-client.test.ts  zendesk-client.ts
outlook-mcp-example/: .gitignore  backup-logs.sh  claude-config-sample.json  debug-env.js  find-folder-ids.js  outlook-auth-server.js  test-config.js  test-direct.sh
outlook-mcp-example/auth/: index.js  token-manager.js
outlook-mcp-example/email/: index.js  list.js
outlook-mcp-example/folder/: create.js  list.js
rules/: create.js  index.js  list.js
src/: package-lock.json  package.json  setup-oauth.sh
utils/: odata-helpers.js
zendesk-mcp-example/: .env.example  .gitignore  README.md  pyproject.toml
zendesk-mcp-example/.github/workflows/: ci.yml
zendesk-mcp-example/src/zendesk_mcp_server/: __init__.py  server.py  zendesk_client.py
(+15 files in other folders)
